--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -18,15 +17,16 @@ android {
         }
     }
 
+}
 
+repositories {
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.0.1'
-    //compile 'cz.msebera.android:httpclient:4.4.1.1'
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:v1.6.0'
-    //compile 'com.writingminds:FFmpegAndroid:0.3.2'
     compile 'com.github.ed-george:AndroidVimeoExtractor:v1.1.1'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -34,15 +34,8 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-    //compile 'com.android.support:design:25.0.1'
-
     compile 'com.minimize.library:seekbar-compat:0.2.5'
-
     compile 'com.android.support:recyclerview-v7:25.0.1'
-
     compile 'com.devbrackets.android:exomedia:4.0.0-preview4'
-    //compile 'com.devbrackets.android:exomedia:4.0.0'
-
-
 }
 
