Commented out lines in gradle.properties which incorrectly forced use of a proxy for build opperations.

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@
 # org.gradle.parallel=true
 #Tue Nov 28 19:23:19 IST 2017
 systemProp.https.proxyPort=808
-systemProp.http.proxyHost=192.168.0.75
+#systemProp.http.proxyHost=192.168.0.75
 org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyHost=192.168.0.75
+#systemProp.https.proxyHost=192.168.0.75
 systemProp.http.proxyPort=808
