--- a/tvpage-library/build.gradle
+++ b/tvpage-library/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+
     defaultConfig {
 
         minSdkVersion 17
@@ -23,11 +23,12 @@ repositories {
     maven { url "https://jitpack.io" }
     mavenCentral()
     jcenter()
+    google()
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.HaarigerHarald:android-youtubeExtractor:v1.6.0'
     compile 'com.github.ed-george:AndroidVimeoExtractor:v1.1.1'
     //Glide
@@ -37,7 +38,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'com.minimize.library:seekbar-compat:0.2.5'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.devbrackets.android:exomedia:4.0.0-preview4'
 }
 
