Updated build files to make maven resources - Added code to create a build id for the library artifacts more dynamically based on the git commit number - Added code to generate maven file suitable for packaging - Added code to generate javadoc - changed mode on gradlew to add execute flag - updated library iml

--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,9 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    def gitCommitCount = "git rev-list HEAD --count".execute().text.trim().toBigInteger()
+    project.ext.set("versionCode", gitCommitCount)
+    project.ext.set("gitCommitCount", gitCommitCount)
+}
